--- a/locale/template.txt
+++ b/locale/template.txt
@@ -1,14 +1,17 @@
 # textdomain: x_enchanting
 Sharpness=
+Looting=
 Fortune=
 Unbreaking=
 Efficiency=
 Silk Touch=
 Curse of Vanishing=
 Knockback=
+Power=
+Punch=
+Infinity=
 Enchanted=
 Enchant=
-level=
 Enchanting Table=
 owned by=
 Scroll of Enchantments=
